# lightdm-xfce4

./: .gitignore  Makefile.am  autogen.sh  configure.ac  lightdm-xfce4-greeter.doap
data/: Makefile.am  greeter.ui  lightdm-xfce4-greeter.desktop
po/: .gitignore  POTFILES.in
settings/: .gitignore  Makefile.am  lightdm-dialog.glade  main.c  xfce4-lightdm-settings.desktop.in
src/: .gitignore  Makefile.am  lightdm-builder.c  lightdm-language.c  lightdm-panel.c  lightdm-session.c  lightdm-user-button.c  lightdm-user-button.h  lightdm-user-list.c  lightdm-user-list.h  lightdm-user-view.c  lightdm-xfce4-greeter.c  lightdm-xfce4-greeter.glade  lightdm-xfce4-greeter.h
