xgreetersdir = $(datadir)/xgreeters
dist_xgreeters_DATA = lightdm-xfce4-greeter.desktop

icondir = $(greeterdatadir)/hicolor/scalable/apps
dist_icon_DATA = accessibility.svg system-shutdown.svg

configdir = $(sysconfdir)/lightdm
dist_config_DATA = lightdm-xfce4-greeter.conf

DISTCLEANFILES = \
	Makefile.in
